--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <a href="https://www.instagram.com/0707justinsu/">justinsu</a>
   <img src="">
   <a href="https://www.instagram.com/lobster_ma/">losialobster</a>
+  <a href="https://www.instagram.com/jc._.1030?igsh=OXJyd3JocmM2YmJn/">jc._.1030</a>
   </body>
   <button>向@justinsu0707發射導彈</button> 
   	
